--- a/src/style.css
+++ b/src/style.css
@@ -1,7 +1,7 @@
-.container > div {
+/* .container > div {
     display: flex;
     justify-content: space-around;
-}
+} */
 
 ul {
     list-style-type: none;
