--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,78 @@
     transform: rotate(360deg);
   }
 }
+
+.container {
+  background-color: #F7F6F6;
+
+  align-content: center;
+}
+
+.container, .boxer {
+  display: flex;
+  flex-direction: row;
+}
+
+.bar {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #DDDDDD;
+  height: 395px;
+  margin: 15px;
+  padding-top: 10px;
+  padding-left: -14px;
+  padding-right: 42px;
+}
+
+.reviews, .rating, .sentiment {
+  align-items: flex-start;
+  justify-content: space-between;
+  margin: 10px;
+  background-color: #DDDDDD;
+  margin: 10px;
+  width: 175px;
+  height: 175px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+}
+
+.sentiment {
+  text-align: center;
+}
+
+p {
+  font-size: 24px;
+}
+
+.para {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 18px;
+}
+.pV {
+  font-size: 20px;
+  margin-top: -5px;
+}
+
+.visitors {
+  align-items: flex-start;
+  margin: 10px;
+  background-color: #DDDDDD;
+  width: 575px;
+  height: 175px;
+  padding: 10px 0 5px 7px;
+  padding-left: 5px;;
+}
+
+.boxer2 {
+  display: block;
+  background-color: slategray;
+  height: 50px;
+  color: slategray;
+}
+
+ul {
+  list-style-type: none;
+}
